логика отправки сообщений без кафки(пока)